testdata/cases/analyze/invalid_utf8.expected
testdata/cases/analyze/invalid_utf8.go:6:29: error[invalid-utf8]: argument is not a valid UTF-8 encoded string
