testdata/cases/analyze/invalid_utf8.go
package analyze_cases

import "strings"

func trimInvalidUTF8(value string) string {
	return strings.Trim(value, "\xff")
}
